add get manifest endpoint and quay service to call official api
